# zlaunch

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
assets/themes/: ayu-dark.toml  catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  everforest.toml  gruvbox-dark.toml  kanagawa.toml  material.toml  monokai.toml  nord.toml  one-dark.toml  rose-pine.toml  solarized-dark.toml  synthwave.toml  tokyo-night.toml
src/: assets.rs  cli.rs  daemon.rs  error.rs  lib.rs  test_utils.rs  tokio_runtime.rs
src/ai/: client.rs  mod.rs  streaming.rs
src/app/: events.rs  window.rs
src/calculator/: evaluation.rs  mod.rs
src/clipboard/: copy.rs  data.rs  item.rs  mod.rs  monitor.rs
src/compositor/: base.rs  detect.rs  error.rs  hyprland.rs  kwin.rs  mangowm.rs  mod.rs  niri.rs  noop.rs
src/config/: mod.rs  service.rs  theme_loader.rs  types.rs  validation.rs
src/daemon/: event_handler.rs  init.rs  mod.rs  reload.rs  theme.rs  watcher.rs
src/desktop/: env.rs  exec.rs  icon_cache.rs  mod.rs  parser.rs  scanner.rs  watcher.rs
src/desktop/cache/: mod.rs  validation.rs
src/ipc/: client.rs  commands.rs  mod.rs  server.rs
src/items/: action.rs  ai.rs  application.rs  calculator.rs  dispatch.rs  mod.rs  search.rs  submenu.rs  theme.rs  traits.rs  window.rs
src/process/: mod.rs
src/search/: detection.rs  providers.rs
src/ui/: icon.rs  launcher.rs  mod.rs  styled.rs  theme.rs
src/ui/components/: input_field.rs  list_item.rs  mod.rs  section_header.rs
src/ui/components/preview/: mod.rs
src/ui/core/: focus.rs  input_handler.rs  mod.rs  navigation.rs
src/ui/delegates/: base.rs  clipboard_delegate.rs  dynamic_items.rs  emoji_delegate.rs  item_delegate.rs  item_filter.rs  mod.rs  section_manager.rs  theme_delegate.rs
src/ui/items/: delegate.rs  mod.rs
src/ui/launcher/: actions.rs  mod.rs  mode_switching.rs  navigation.rs  render.rs  state.rs
src/ui/markdown/: mod.rs
src/ui/modes/: ai_mode.rs  base.rs  clipboard_mode.rs  emoji_mode.rs  mod.rs  theme_mode.rs
src/ui/utils/: color.rs  file_type.rs  mod.rs
src/ui/views/: ai_view.rs  clipboard_rendering.rs  emoji_rendering.rs  item_rendering.rs  mod.rs  theme_rendering.rs
