[package]
name = "zlaunch"
version = "0.1.0"
edition = "2024"
description = "A fast application launcher for Linux wayland desktops built with GPUI."
repository = "https://github.com/zortax/zlaunch"
license = "MIT"
authors = ["Leonard Seibold <git@zrtx.de>"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "7c724c0f1049e610c541c2f4f6a8739f91865e02" }
gpui-component = "0.4.1"
gpui-component-assets = "0.4.1"
rust-embed = "8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
flume = "0.11"
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fasteval = "0.2"
regex = "1"
emojis = "0.8"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
freedesktop-desktop-entry = "0.7"
freedesktop-icons = "0.4"
arboard = { version = "3", features = ["wayland-data-control"] }

[target.'cfg(windows)'.dependencies]
arboard = "3"
winreg = "0.55"

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed", rev = "7c724c0f1049e610c541c2f4f6a8739f91865e02" }
