[package]
name = "zlaunch"
version = "0.1.0"
edition = "2024"
description = "A fast application launcher for Linux wayland desktops built with GPUI."
repository = "https://github.com/zortax/zlaunch"
license = "MIT"
authors = ["Leonard Seibold <git@zrtx.de>"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "7c724c0f1049e610c541c2f4f6a8739f91865e02" }
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
rust-embed = "8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
freedesktop-desktop-entry = "0.7"
freedesktop-icons = "0.4"
dirs = "6"
flume = "0.12"
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fasteval = "0.2"
arboard = { version = "3", features = ["wayland-data-control"] }
regex = "1"
emojis = "0.8"
image = "0.25"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
urlencoding = "2"
llm = "1.3"
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tarpc = { version = "0.37", features = ["serde-transport", "tokio1", "serde1"] }
tokio-serde = { version = "0.9", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.9"
pulldown-cmark = "0.13"
libc = "0.2"
zbus = { version = "5", default-features = false, features = ["blocking-api"] }

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed", rev = "7c724c0f1049e610c541c2f4f6a8739f91865e02" }
