[package]
name = "zlaunch"
version = "0.4.0"
edition = "2024"
description = "A fast application launcher for Linux wayland desktops built with GPUI."
repository = "https://github.com/zortax/zlaunch"
license = "MIT"
authors = ["Leonard Seibold <git@zrtx.de>"]

[dependencies]
gpui = { git = "https://github.com/zortax/zed", branch = "wgpu" }
# gpui-component = "0.5.0"
# gpui-component-assets = "0.5.0"
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "ad554b20022a4bef79212ecddb1a3079eb2c1a85" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "ad554b20022a4bef79212ecddb1a3079eb2c1a85" }
rust-embed = "8"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
freedesktop-desktop-entry = "0.8"
freedesktop-icons = "0.4"
dirs = "6"
flume = "0.12"
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fend-core = "1.5"
arboard = { version = "3", features = ["wayland-data-control"] }
regex = "1"
emojis = "0.8"
image = "0.25"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
urlencoding = "2"
llm = "1.3"
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tarpc = { version = "0.37", features = ["serde-transport", "tokio1", "serde1"] }
tokio-serde = { version = "0.9", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.9"
pulldown-cmark = "0.13"
libc = "0.2"
zbus = { version = "5", default-features = false, features = ["blocking-api"] }
notify = "8"

[patch.crates-io]
zbus = { git = "https://github.com/dbus2/zbus.git", tag = "zvariant-5.8.0" }
zbus_macros = { git = "https://github.com/dbus2/zbus.git", tag = "zvariant-5.8.0" }
zbus_names = { git = "https://github.com/dbus2/zbus.git", tag = "zvariant-5.8.0" }
zvariant = { git = "https://github.com/dbus2/zbus.git", tag = "zvariant-5.8.0" }
zvariant_derive = { git = "https://github.com/dbus2/zbus.git", tag = "zvariant-5.8.0" }
zvariant_utils = { git = "https://github.com/dbus2/zbus.git", tag = "zvariant-5.8.0" }

[patch.'https://github.com/zed-industries/zed']
gpui = { git = "https://github.com/zortax/zed", branch = "wgpu" }
